# products_api

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
docs/: api-endpoints.md  authentication-security.md  configuration.md  contribution.md  deploy.md  development.md  guidelines.md  index.md  installation.md  overview.md  prerequisites.md  project-structure.md  release-notes.md  system-modeling.md  tests.md
migrations/: env.py
migrations/versions/: 031f120a9c1b_initial_schema.py  271908aa6033_create_users_brands_products_table.py  5116ee3b8eba_refactor_renomeia_owner_para_seller.py  70da30e2dbf7_create_users_brands_products_table.py  ae030377feac_adicionando_novos_campos_a_tabela_.py  d9b0c642b429_initial_postgre.py
products_api/: app.py
products_api/core/: database.py  security.py  settings.py
products_api/models/: __init__.py  products.py  users.py
products_api/routers/: auth.py  brands.py  products.py  users.py
products_api/schemas/: auth.py  brands.py  products.py  users.py
