[project]
name = "products-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Guilherme Rodrigues",email = "guirodrigues2506@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13,<4"
dependencies = [
    "fastapi[standard] (>=0.135.2,<0.136.0)",
    "aiosqlite (>=0.22.1,<0.23.0)",
    "pydantic-settings (>=2.13.1,<3.0.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "sqlalchemy[asyncio] (>=2.0.48,<3.0.0)",
    "pwdlib[argon2] (>=0.3.0,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
